--- a/docker-compose.yml.tmpl
+++ b/docker-compose.yml.tmpl
@@ -11,7 +11,7 @@ services:
     environment:
       PORTAL_LISTENING_PORT: 8000
       CHECK_CONN_FREQ: 10
-      PORTAL_SSID: 'Anthias WiFi Connect'
+      PORTAL_SSID: 'HIVE WiFi Connect'
       DBUS_SYSTEM_BUS_ADDRESS: 'unix:path=/run/dbus/system_bus_socket'
     network_mode: host
     privileged: true
