--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Login to Anthias{% endblock %}
+{% block title %}Login to HIVE{% endblock %}
 
 {% block content %}
 <div class="container mt-5">
@@ -8,7 +8,7 @@
     <div class="col-md-6">
       <div class="card">
         <div class="card-header">
-          <h4 class="mb-0">Login to Anthias</h4>
+          <h4 class="mb-0">Login to HIVE</h4>
         </div>
         <div class="card-body">
           {% if messages %}
