--- a/docker/Dockerfile.celery.j2
+++ b/docker/Dockerfile.celery.j2
@@ -15,7 +15,7 @@ COPY . /usr/src/app/
 ENV GIT_HASH={{ git_hash }}
 ENV GIT_SHORT_HASH={{ git_short_hash }}
 ENV GIT_BRANCH={{ git_branch }}
-ENV DJANGO_SETTINGS_MODULE="anthias_django.settings"
+ENV DJANGO_SETTINGS_MODULE="hive_django.settings"
 
 CMD celery -A celery_tasks.celery worker \
   -B -n worker@anthias \
