--- a/templates/splash-page.html
+++ b/templates/splash-page.html
@@ -6,7 +6,7 @@
     {% load static %}
     <meta charset="utf-8"/>
     <title>Welcome to HIVE</title>
-    <link href="{% static 'dist/css/anthias.css' %}" rel="stylesheet"/>
+    <link href="{% static 'dist/css/hive.css' %}" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css?family=Plus Jakarta Sans" rel="stylesheet">
     <link rel="icon" href="/static/favicons/favicon.ico">
     <style type="text/css">
